--- a/Hinata.Core/Hinata.Core.csproj
+++ b/Hinata.Core/Hinata.Core.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="SharpCompress" Version="0.32.2"/>
+    </ItemGroup>
+
 </Project>
